package pizzas;

import pizzas.Pizza;

public class CheeseBrestPizza extends Pizza {

    public CheeseBrestPizza(){
        this.name = "Cheese Brest Style Pizza";
    }
}
