package pizzas;

import pizzas.Pizza;

public class CheeseStrasbourgPizza extends Pizza {
    public CheeseStrasbourgPizza(){
        this.name = "Cheese Strasbourg Style Pizza";
    }
}
