package pizzas;

import pizzas.Pizza;

public class GreekBrestPizza extends Pizza {
    public GreekBrestPizza(){
        this.name = "Greek Brest Style Pizza";
    }
}
