package pizzas;

import pizzas.Pizza;

public class GreekStrasbourgPizza extends Pizza {
    public GreekStrasbourgPizza() {
        this.name = "Greek Strasbourg Style Pizza";
    }
}
