@startuml

title __SRC's Class Diagram__\n


      abstract class pizzerias.Pizzeria {
          {abstract} + createPizza()
          + orderPizza()
      }

      class pizzerias.PizzeriaBrest {
          + createPizza()
      }

      class pizzerias.PizzeriaStrasbourg {
          + createPizza()
      }



      class pizzas.CheeseBrestPizza {
          + CheeseBrestPizza()
      }

      class pizzas.CheeseStrasbourgPizza {
          + CheeseStrasbourgPizza()
      }

      class pizzas.GreekBrestPizza {
          + GreekBrestPizza()
      }
      class pizzas.GreekStrasbourgPizza {
          + GreekStrasbourgPizza()
      }

      abstract class pizzas.Pizza {
          ~ dough : String
          ~ name : String
          ~ sauce : String
          ~ toppings : ArrayList<String>
          + cook()
          + cut()
          + getName()
          + prepare()
          + wrap()
      }

  pizzas.CheeseBrestPizza -up-|> pizzas.Pizza
  pizzas.CheeseStrasbourgPizza -up-|> pizzas.Pizza
  pizzas.GreekBrestPizza -up-|> pizzas.Pizza
  pizzas.GreekStrasbourgPizza -up-|> pizzas.Pizza

   pizzerias.PizzeriaBrest -up-|> pizzerias.Pizzeria
   pizzerias.PizzeriaStrasbourg -up-|> pizzerias.Pizzeria


  pizzerias.Pizzeria -> pizzas.Pizza
  pizzerias.PizzeriaBrest ..> pizzas.CheeseBrestPizza
  pizzerias.PizzeriaBrest ..> pizzas.GreekBrestPizza
  pizzerias.PizzeriaStrasbourg ..> pizzas.CheeseStrasbourgPizza
  pizzerias.PizzeriaStrasbourg ..> pizzas.GreekStrasbourgPizza

right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
